代码版本整合

--- a/src/components/BaoWeiCharts/css/index.css
+++ b/src/components/BaoWeiCharts/css/index.css
@@ -796,9 +796,8 @@ body {
 }
 .fieldset-list {
   display: flex;
-  /* justify-content: center; */
   overflow: auto;
-    width: 1250px;
+  width: 1250px;
 }
 /*iframe配置*/
 .iframe-dy-box .fieldset-list {
@@ -1181,17 +1180,18 @@ body {
 }
 .detail_box .detail_row .detail_col .key {
   width: 80px;
-  padding: 5px;
   border-left: 1px solid #c1c1c1;
   border-bottom: 1px solid #c1c1c1;
   display: flex;
   align-items: center;
-  background: #f5f5f5;
+  background: #F5F9FF;
   box-sizing: border-box;
+  line-height: 20px;
+  padding: 8px 3px;
+  justify-content: center;
 }
 .detail_box .detail_row .detail_col .value {
   width: calc(100% - 80px);
-  padding: 5px;
   clear: right;
   border-left: 1px solid #c1c1c1;
   border-bottom: 1px solid #c1c1c1;
@@ -1200,6 +1200,9 @@ body {
   max-height: 81px;
   overflow: auto;
   box-sizing: border-box;
+  line-height: 20px;
+  padding: 8px 3px;
+  text-align: center;
 }
 .detail_box .detail_row .detail_col .value.bg {
   background: #dcdcdc;
