交互功能阶段提交

--- a/src/components/BaoWeiCharts/css/index.less
+++ b/src/components/BaoWeiCharts/css/index.less
@@ -434,6 +434,7 @@ body{
         margin-right: 5px;
         font-size: 18px;
         cursor: pointer;
+        line-height: 40px;
       }
 
       .txt3 {
