--- a/src/components/BaoWeiCharts/css/index.css
+++ b/src/components/BaoWeiCharts/css/index.css
@@ -384,6 +384,7 @@ body {
   margin-right: 5px;
   font-size: 18px;
   cursor: pointer;
+  line-height: 40px;
 }
 .statistics_title .box .right .txt3 {
   font-size: 12px;
