--- a/src/components/BaoWeiCharts/css/index.less
+++ b/src/components/BaoWeiCharts/css/index.less
@@ -1434,6 +1434,7 @@ body{
   width: 100%;
   justify-content: space-between;
   overflow: hidden;
+  min-height: 40px;
   .where-left {
     display: flex;
   }
@@ -1452,9 +1453,6 @@ body{
     }
     .el-input__inner {
       padding: 0 5px;
-    }
-    .el-form-item__content {
-      // line-height: 32px;
     }
     .el-radio-group.border {
       padding: 6px 2px;
@@ -1502,7 +1500,7 @@ body{
     display: flex;
     button {
       height: 32px;
-      margin-top: 5px;
+      margin-top: 2px;
       margin-left: 10px;
     }
   }
