--- a/src/components/BaoWeiCharts/css/index.less
+++ b/src/components/BaoWeiCharts/css/index.less
@@ -195,6 +195,7 @@ body{
     }
     .el-menu-vertical-demo {
       height: 100%;
+      overflow: auto;
       .el-menu-item,
       .el-submenu__title {
         height: 40px;
