--- a/src/components/BaoWeiCharts/css/index.less
+++ b/src/components/BaoWeiCharts/css/index.less
@@ -919,7 +919,7 @@ body{
   display: flex;
   // justify-content: center;
   overflow: auto;
-  width: 1250px;
+  // width: 1250px;
 }
 /*iframe配置*/
 .iframe-dy-box {
@@ -1638,6 +1638,10 @@ body{
     }
     .setting-box {
       width: 100%;
+    }
+    .content-setting{
+      display: flex;
+      justify-content: flex-start;
     }
     .top-bar-setting-box {
       // width: 646px;
