--- a/src/components/BaoWeiCharts/css/index.less
+++ b/src/components/BaoWeiCharts/css/index.less
@@ -535,9 +535,9 @@ body{
 }
 #bw_list,
 #bw_table {
-  .el-pagination {
-    margin-top: 5px;
-  }
+  // .el-pagination {
+  //   margin-top: 5px;
+  // }
   thead .cell{
     text-align: center;
   }
@@ -1166,7 +1166,7 @@ body{
 /*表格、列表右侧按钮配置模块*/
 .operate-button-setting-dialog {
   .el-dialog {
-    width: 600px;
+    width: 1200px;
     .operate-button-table {
       width: auto;
     }
