--- a/src/components/BaoWeiCharts/css/index.less
+++ b/src/components/BaoWeiCharts/css/index.less
@@ -167,7 +167,7 @@ body {
     overflow: visible;
     padding: 0;
     margin-bottom: 0;
-
+    box-sizing: content-box;
     .el-menu {
       background: transparent;
     }
@@ -226,7 +226,7 @@ body {
     .el-menu-vertical-demo {
       height: 100%;
       overflow: auto;
-
+    
       .el-menu-item,
       .el-submenu__title {
         height: 40px;
@@ -455,15 +455,7 @@ body {
   padding: 10px 20px 0;
   color: white;
 
-  // background: #f5f7fa;
-  .el-icon-close {
-    position: absolute;
-    font-size: 20px;
-    right: 2px;
-    top: 2px;
-    color: white;
-    cursor: pointer;
-  }
+
 
   .more {
     font-size: 14px;
@@ -720,6 +712,16 @@ body {
     .statistics-content {
       padding: 5px;
     }
+      // background: #f5f7fa;
+  .el-icon-close {
+    position: absolute;
+    font-size: 22px;
+    right: 2px;
+    top: 2px;
+    color: white;
+    cursor: pointer;
+    z-index: 9999999999;
+  }
   }
 
   .suofang {
@@ -1921,8 +1923,10 @@ body {
   padding: 0;
   box-shadow: 0px 0px 5px rgba(123, 117, 117, 0.54);
 
-  .statisticsBox .statistics-content {
-    padding: 0;
+  .statisticsBox {
+    .statistics-content {
+      padding: 0;
+    }
   }
 }
 
