主题样式调整

--- a/src/components/BaoWeiCharts/css/theme/theme1.scss
+++ b/src/components/BaoWeiCharts/css/theme/theme1.scss
@@ -74,6 +74,12 @@
     .static-where-2 {
         background-color: #dcdfe6;
     }
+    .el-menu-vertical-demo .el-menu-item.is-active {
+        background-color: #6ebcffd6;
+    }
+    .el-menu-vertical-demo .el-menu-item:hover {
+        background-color: #6ebcffd6;
+    }
     .KFQ_wrap {
         .el-header {
             background: #0a1a33 !important;
