--- a/src/components/BaoWeiCharts/css/theme/theme2.scss
+++ b/src/components/BaoWeiCharts/css/theme/theme2.scss
@@ -89,6 +89,12 @@
             color: $--color-primary;
         }
     }
+    .el-menu-vertical-demo .el-menu-item.is-active {
+        background-color: #5aa9ecd1;
+    }
+    .el-menu-vertical-demo .el-menu-item.is-active {
+        background-color: #5aa9ecd1;
+    }
     .statistics_title {
         line-height: 42px;
         height: 42px;
