--- a/src/components/BaoWeiCharts/css/index.less
+++ b/src/components/BaoWeiCharts/css/index.less
@@ -570,7 +570,7 @@ body {
 // table
 #bw_table {
   td {
-    padding: 2px 3px;
+    padding: 0;
   }
 
   th {
@@ -578,7 +578,7 @@ body {
   }
 
   .caret-wrapper {
-    height: 26px;
+    height: 40px;
 
     .sort-caret.ascending {
       top: 2px;
@@ -591,12 +591,12 @@ body {
 
   .el-table__row .cell {
     padding: 0;
-    height: 26px;
-    line-height: 26px;
-
+    height: 40px;
+    line-height: 40px;
     overflow: hidden;
     white-space: nowrap;
     text-overflow: ellipsis;
+    text-indent: 3px;
   }
 }
 
