--- a/src/components/BaoWeiCharts/css/index.css
+++ b/src/components/BaoWeiCharts/css/index.css
@@ -442,13 +442,13 @@ body {
   display: block;
 }
 #bw_table td {
-  padding: 2px 3px;
+  padding: 0;
 }
 #bw_table th {
   padding: 0;
 }
 #bw_table .caret-wrapper {
-  height: 26px;
+  height: 40px;
 }
 #bw_table .caret-wrapper .sort-caret.ascending {
   top: 2px;
@@ -458,11 +458,12 @@ body {
 }
 #bw_table .el-table__row .cell {
   padding: 0;
-  height: 26px;
-  line-height: 26px;
+  height: 40px;
+  line-height: 40px;
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
+  text-indent: 3px;
 }
 #bw_list thead .cell,
 #bw_table thead .cell {
