--- a/src/components/BaoWeiCharts/css/index.less
+++ b/src/components/BaoWeiCharts/css/index.less
@@ -569,6 +569,24 @@ body {
 
 // table
 #bw_table {
+  .table-functional-components{
+    text-align: right;
+    line-height: 40px;
+    padding-right: 30px;
+    i{
+      font-size: 25px;
+      display: inline-block;
+      width: 30px;
+      line-height: 30px;
+      // border: 1px solid #8C8C8C;
+      border: 1px solid #CACACA;
+      text-align: center;
+      color:#1D1D1D;
+      cursor: pointer;
+      margin-left: 10px;
+      position: relative;
+    }
+  }
   td {
     padding: 0;
   }
