--- a/src/components/BaoWeiCharts/components/TimeAxis/index.scss
+++ b/src/components/BaoWeiCharts/components/TimeAxis/index.scss
@@ -17,6 +17,15 @@ $--color-primary: #4472c4;
             color: red;
         }
     }
+    .time-axis-content {
+        display: flex;
+        justify-content: center;
+        justify-items: center;
+        .label {
+            line-height: 38px;
+            font-size: 16px;
+        }
+    }
     .time-list {
         display: flex;
         height: 10px;
@@ -25,10 +34,7 @@ $--color-primary: #4472c4;
         background: linear-gradient(90deg, #2D91FF, #7EF2BB);
         padding-inline-start: 20px;
         li {
-            //padding-right: 40px;
-            //background: url(./images/t1.png) no-repeat right center;
-            //margin-right: 8px;
-            // 
+            box-sizing: content-box;
             list-style: none;
             .text {
                 display: block;
@@ -71,6 +77,12 @@ $--color-primary: #4472c4;
             //color: white;
         }
     }
+}
+
+.time-axis.bg-white {
+    background: white;
+    border-radius: 5px;
+    box-shadow: 0 0 3px white;
 }
 
 .time-axis-admin {
