--- a/src/components/BaoWeiCharts/css/index.less
+++ b/src/components/BaoWeiCharts/css/index.less
@@ -163,7 +163,9 @@ body {
   &>.el-container {
     height: ~"calc(100% - 38px)";
   }
-
+  &.isBigData>.el-container{
+    height: 100%;
+  }
   .el-aside {
     height: 100%;
     background: white;
@@ -829,7 +831,9 @@ body {
       height: auto;
       text-align: center;
     }
-
+    .hTxt1,.hTxt2 {
+      width: 100px;
+    }
     .hTxt9 {
       width: 100px;
     }
@@ -1531,7 +1535,7 @@ body {
         }
 
         .hTxt1 {
-          width: 75px;
+          width: 115px;
 
           .el-input-number--small {
             width: 100%;
