--- a/src/components/BaoWeiCharts/css/theme/theme2.scss
+++ b/src/components/BaoWeiCharts/css/theme/theme2.scss
@@ -123,6 +123,10 @@
             .t_list {
                 font-size: 14px;
             }
+            .more {
+                color: $--color-primary;
+                padding-right: 10px;
+            }
         }
     }
 }
