图表组件集添加自定义字段可点击状态功能，柱状图等添加x轴、y轴自定义名称功能

--- a/src/components/BaoWeiCharts/css/theme/theme1.scss
+++ b/src/components/BaoWeiCharts/css/theme/theme1.scss
@@ -112,6 +112,9 @@
                         .left .txt2 {
                             color: #a9dbfb !important;
                         }
+                        .left .txt1 {
+                            color: #fff !important;
+                        }
                         .right {
                             color: #fff;
                         }
