--- a/src/components/BaoWeiCharts/css/index.css
+++ b/src/components/BaoWeiCharts/css/index.css
@@ -1594,3 +1594,8 @@ body {
 .tabs-setting-form-dialog .el-dialog .el-form-item {
   margin-bottom: 12px;
 }
+/*区县组件*/
+.country-radio .country-2 .el-radio-button .el-radio-button__inner {
+  border: none;
+  box-shadow: -1px 0 0 0 white !important;
+}
