--- a/src/components/BaoWeiCharts/css/index.less
+++ b/src/components/BaoWeiCharts/css/index.less
@@ -2125,3 +2125,11 @@ body {
     }
   }
 }
+
+
+
+/*区县组件*/
+.country-radio .country-2 .el-radio-button .el-radio-button__inner{
+  border: none;
+  box-shadow: -1px 0 0 0 white !important;
+}
