阶段提交，版本更新

--- a/src/components/BaoWeiCharts/css/theme/theme2.scss
+++ b/src/components/BaoWeiCharts/css/theme/theme2.scss
@@ -92,7 +92,7 @@
     .el-menu-vertical-demo .el-menu-item.is-active {
         background-color: #5aa9ecd1;
     }
-    .el-menu-vertical-demo .el-menu-item.is-active {
+    .el-menu-vertical-demo .el-submenu__title.is-active {
         background-color: #5aa9ecd1;
     }
     .statistics_title {
