--- a/src/components/BaoWeiCharts/css/theme/theme4.scss
+++ b/src/components/BaoWeiCharts/css/theme/theme4.scss
@@ -84,6 +84,16 @@
         padding: 10px;
         text-align: center;
     }
+    .el-form {
+      .el-form-item {
+        margin-bottom: 10px;
+      }
+    }
+    .el-table__row {
+      .cell {
+        text-align: center;
+      }
+    }
     .statisticsBox {
         .el-icon-close {
             color: $--color-primary;
