--- a/src/components/BaoWeiCharts/css/theme/theme3.scss
+++ b/src/components/BaoWeiCharts/css/theme/theme3.scss
@@ -86,7 +86,7 @@
     }
     .statisticsBox {
         .el-icon-close {
-            color: $--color-primary;
+            color: white;
         }
     }
     .el-menu-vertical-demo .el-menu-item.is-active {
