--- a/src/components/BaoWeiCharts/css/font/demo_index.html
+++ b/src/components/BaoWeiCharts/css/font/demo_index.html
@@ -55,6 +55,18 @@
           <ul class="icon_lists dib-box">
           
             <li class="dib">
+              <span class="icon iconfont">&#xe74b;</span>
+                <div class="name">详情</div>
+                <div class="code-name">&amp;#xe74b;</div>
+              </li>
+          
+            <li class="dib">
+              <span class="icon iconfont">&#xe608;</span>
+                <div class="name">定位</div>
+                <div class="code-name">&amp;#xe608;</div>
+              </li>
+          
+            <li class="dib">
               <span class="icon iconfont">&#xe623;</span>
                 <div class="name">编辑</div>
                 <div class="code-name">&amp;#xe623;</div>
@@ -372,9 +384,9 @@
 <pre><code class="language-css"
 >@font-face {
   font-family: 'iconfont';
-  src: url('iconfont.woff2?t=1623294189008') format('woff2'),
-       url('iconfont.woff?t=1623294189008') format('woff'),
-       url('iconfont.ttf?t=1623294189008') format('truetype');
+  src: url('iconfont.woff2?t=1624409859339') format('woff2'),
+       url('iconfont.woff?t=1624409859339') format('woff'),
+       url('iconfont.ttf?t=1624409859339') format('truetype');
 }
 </code></pre>
           <h3 id="-iconfont-">第二步：定义使用 iconfont 的样式</h3>
@@ -399,6 +411,24 @@
       </div>
       <div class="content font-class">
         <ul class="icon_lists dib-box">
+          
+          <li class="dib">
+            <span class="icon iconfont iconxiangqing"></span>
+            <div class="name">
+              详情
+            </div>
+            <div class="code-name">.iconxiangqing
+            </div>
+          </li>
+          
+          <li class="dib">
+            <span class="icon iconfont iconFrame1"></span>
+            <div class="name">
+              定位
+            </div>
+            <div class="code-name">.iconFrame1
+            </div>
+          </li>
           
           <li class="dib">
             <span class="icon iconfont iconiconset0136"></span>
@@ -876,6 +906,22 @@
       </div>
       <div class="content symbol">
           <ul class="icon_lists dib-box">
+          
+            <li class="dib">
+                <svg class="icon svg-icon" aria-hidden="true">
+                  <use xlink:href="#iconxiangqing"></use>
+                </svg>
+                <div class="name">详情</div>
+                <div class="code-name">#iconxiangqing</div>
+            </li>
+          
+            <li class="dib">
+                <svg class="icon svg-icon" aria-hidden="true">
+                  <use xlink:href="#iconFrame1"></use>
+                </svg>
+                <div class="name">定位</div>
+                <div class="code-name">#iconFrame1</div>
+            </li>
           
             <li class="dib">
                 <svg class="icon svg-icon" aria-hidden="true">
