--- a/src/components/BaoWeiCharts/css/font/demo_index.html
+++ b/src/components/BaoWeiCharts/css/font/demo_index.html
@@ -55,6 +55,18 @@
           <ul class="icon_lists dib-box">
           
             <li class="dib">
+              <span class="icon iconfont">&#xe6a8;</span>
+                <div class="name">文档</div>
+                <div class="code-name">&amp;#xe6a8;</div>
+              </li>
+          
+            <li class="dib">
+              <span class="icon iconfont">&#xe8d6;</span>
+                <div class="name">宗地</div>
+                <div class="code-name">&amp;#xe8d6;</div>
+              </li>
+          
+            <li class="dib">
               <span class="icon iconfont">&#xe74b;</span>
                 <div class="name">详情</div>
                 <div class="code-name">&amp;#xe74b;</div>
@@ -384,9 +396,9 @@
 <pre><code class="language-css"
 >@font-face {
   font-family: 'iconfont';
-  src: url('iconfont.woff2?t=1624409859339') format('woff2'),
-       url('iconfont.woff?t=1624409859339') format('woff'),
-       url('iconfont.ttf?t=1624409859339') format('truetype');
+  src: url('iconfont.woff2?t=1624418288122') format('woff2'),
+       url('iconfont.woff?t=1624418288122') format('woff'),
+       url('iconfont.ttf?t=1624418288122') format('truetype');
 }
 </code></pre>
           <h3 id="-iconfont-">第二步：定义使用 iconfont 的样式</h3>
@@ -411,6 +423,24 @@
       </div>
       <div class="content font-class">
         <ul class="icon_lists dib-box">
+          
+          <li class="dib">
+            <span class="icon iconfont iconwendang"></span>
+            <div class="name">
+              文档
+            </div>
+            <div class="code-name">.iconwendang
+            </div>
+          </li>
+          
+          <li class="dib">
+            <span class="icon iconfont iconzongdi"></span>
+            <div class="name">
+              宗地
+            </div>
+            <div class="code-name">.iconzongdi
+            </div>
+          </li>
           
           <li class="dib">
             <span class="icon iconfont iconxiangqing"></span>
@@ -906,6 +936,22 @@
       </div>
       <div class="content symbol">
           <ul class="icon_lists dib-box">
+          
+            <li class="dib">
+                <svg class="icon svg-icon" aria-hidden="true">
+                  <use xlink:href="#iconwendang"></use>
+                </svg>
+                <div class="name">文档</div>
+                <div class="code-name">#iconwendang</div>
+            </li>
+          
+            <li class="dib">
+                <svg class="icon svg-icon" aria-hidden="true">
+                  <use xlink:href="#iconzongdi"></use>
+                </svg>
+                <div class="name">宗地</div>
+                <div class="code-name">#iconzongdi</div>
+            </li>
           
             <li class="dib">
                 <svg class="icon svg-icon" aria-hidden="true">
