--- a/src/components/BaoWeiCharts/css/font/iconfont.css
+++ b/src/components/BaoWeiCharts/css/font/iconfont.css
@@ -1,8 +1,8 @@
 @font-face {
   font-family: "iconfont"; /* Project id 1931343 */
-  src: url('iconfont.woff2?t=1624409859339') format('woff2'),
-       url('iconfont.woff?t=1624409859339') format('woff'),
-       url('iconfont.ttf?t=1624409859339') format('truetype');
+  src: url('iconfont.woff2?t=1624418288122') format('woff2'),
+       url('iconfont.woff?t=1624418288122') format('woff'),
+       url('iconfont.ttf?t=1624418288122') format('truetype');
 }
 
 .iconfont {
@@ -11,6 +11,14 @@
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+}
+
+.iconwendang:before {
+  content: "\e6a8";
+}
+
+.iconzongdi:before {
+  content: "\e8d6";
 }
 
 .iconxiangqing:before {
